@@ -1,3 +1,5 @@
+2005/12/21 -- released version 20051221_trunk
+
 * Set an --end time for graphs so that fetch does get its its
   undies in a twist when selecting the RRA and goes for hires
   due to coverage -- tobi
